# NTOU_GLFW_Beginner_Template

./: CMakeLists.txt
shaders/: default.frag
src/: main.cpp
